# bf-derivatives-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  jojo.bf
.github/workflows/: actionlint.yml  ci.yml  release.yml
examples/bf/: w.bf
examples/bz-lang/: README.md  grammar.json  hello-world.bz
examples/gero-lang/: README.md  hello-world.gero
examples/jojo-lang/: grammar.json  hanoi  hello-world.jojo
sample/bf/: cell-size.bf  hello-workd.bf
sample/gero-lang/: README.md  grammar.json
sample/jojo-lang/: README.md  grammar.json
src/: brainfuck.pest  grammar.rs  interpreter.rs  jump_table.rs  lib.rs  main.rs  memory.rs  parser.rs  token.rs
tests/: bfi.rs  bft.rs  test_data.rs
