[package]
name = "bf-derivatives-tool"
version = "0.1.0"
authors = ["guricerin <chanbo1e9@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bfi"
path = "src/bin/bfi.rs"

[[bin]]
name = "bft"
path = "src/bin/bft.rs"

[dependencies]
clap = "3.0.0-beta.2"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
