[package]
name = "bf-derivatives-tools"
version = "0.3.0"
authors = ["guricerin <chanbo1e9@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bfi"
path = "src/bin/bfi.rs"

[[bin]]
name = "bft"
path = "src/bin/bft.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
