[package]
name = "bf-derivatives-tools"
version = "0.3.3"
authors = ["guricerin"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Let's create your own brainfuck derivative."
keywords = ["brainfuck", "cli"]
repository = "https://github.com/guricerin/bf-derivatives-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bfi"
path = "src/bin/bfi.rs"

[[bin]]
name = "bft"
path = "src/bin/bft.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
